# EVMobilityBench

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
analysis/: README.md  view_results.bat
analysis/configs/: README_DEPOT.md  campaign_params.json  campaign_params.yaml  depot_facilities.json
analysis/results/: analysis_config.json
analysis/results/raw/: cache_preparation.csv  generation_failures.csv  generation_runs.csv
analysis/scripts/: _paths.py  export_example_instances.py  metrics.py  plot_results.py  prepare_cache.py  print_scientific_report.py  run_full_pipeline.py  run_generation_campaign.py  station_budget.py  summarize_results.py  timed_generation.py
analysis/tables/: generation_time_by_design.csv
experiments/soft_computing_eval/: README.md  config.yaml  run_soft_computing_eval.py
experiments/soft_computing_eval/algorithms/: __init__.py  aco.py  common.py  ga.py  sa.py
experiments/soft_computing_eval/results/: README.md
experiments/soft_computing_eval/utils/: __init__.py  evaluator.py  feasibility_audit.py  instance_loader.py  io_helpers.py  problem.py  route_decoder.py  route_repair.py  route_timing.py
notebooks/: Classic_EVRPTW_User_Guide.ipynb  Multi_Depot_EVRPTW_User_Guide.ipynb  Two_Echelon_EVRP_User_Guide.ipynb
src/evrp_instance_generator_framework/: __init__.py  exceptions.py  generator.py  types.py  visualization.py
src/evrp_instance_generator_framework/customers/: __init__.py  csv_import.py  extraction.py  selection.py
web/NiceGUI_app/: __init__.py  generation.py  main.py  map_layers.py  state.py
(+133 files in other folders)
