[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evrp-benchmark"
version = "0.1.0"
description = "Benchmark-generation library for realistic static EV routing on real road networks."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "EVMobilityBench Authors" }]
keywords = ["EVRP", "benchmark", "OSMnx", "routing", "instance generation"]
dependencies = [
  "osmnx>=1.9.0",
  "networkx>=3.2.1",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "geopandas>=0.14.0",
  "pyarrow>=14.0.0",
  "shapely>=2.0.0",
  "scikit-learn>=1.4.0",
  "python-srtm>=0.5.0",
  "pydeck>=0.8.0",
  "nicegui>=2.0.0",
  "starlette<1.0",
]

[project.optional-dependencies]
demo = ["streamlit>=1.32.0", "pydeck>=0.8.0"]
notebook = ["ipykernel>=6.29.0", "jupyterlab>=4.0.0", "matplotlib>=3.8.0", "folium>=0.17.0"]
test = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"evrp_instance_generator_framework.data" = ["countries_data.json"]

